# bgr

./: Cargo.toml  README.md  run.md
.github/workflows/: build.yaml
examples/: stress_demo.rs
src/: buggudb.rs  codec.rs  config.rs  lib.rs  main.rs  query.rs  types.rs  ufhg.rs
src/utils/: buggu_hash_set.rs  buggu_random_generator.rs
tests/: stress_tests.rs
