[package]
name = "buggu"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast in-memory log search engine with microsecond queries"
license = "MIT"
repository = "https://github.com/AnchitSingh/buggu"

[dependencies]
smallvec = "1.11"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rustyline = "10.0"

[[bin]]
name = "bgr"
path = "src/main.rs"

[lib]
name = "buggu"
path = "src/lib.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
