[package]
name = "bgr"
version = "0.1.2"
edition = "2021"
description = "bgr: BUGGU-GREP, Ultra-fast in-memory log search engine with microsecond queries"
license = "MIT"
repository = "https://github.com/AnchitSingh/bgr"

[dependencies]
smallvec = "1.11"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rustyline = "10.0"
regex = "1.11.1"
serde_json = "1.0"

[[bin]]
name = "bgr"
path = "src/main.rs"

[lib]
name = "bgr"
path = "src/lib.rs"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
